--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Events </h1>
     <button onclick="alert('Hey you clicked me')">Click Me!</button>
+
+    <button id="v2">Click Me (2nd version)</button>
+    <script src="app.js"></script>
 </body>
 </html>
