--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <button onclick="alert('Hey you clicked me')">Click Me!</button>
 
     <button id="v2">Click Me (2nd version)</button>
+    <button id="v3">Click Me (3nd version)</button>
+    <button id="tas">Twist & Shout</button>
     <script src="app.js"></script>
 </body>
 </html>
