used app newLI when press enter

--- a/form/indexx.html
+++ b/form/indexx.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <h1>my Form</h1>
-    <form id="shelterForm"action="/shelter">
-        <input type="text">
+    <form action="/shelter" id="shelterForm">
+        <input type="text" id="catName">
         <button>Submit</button>
     </form>
+        <h2>Available cats</h2>
+        <ul id="cats"></ul>
+
     <script src="app.js"></script>
 </body>
 </html>
