added single delete button

--- a/callbacks/todo app/index.html
+++ b/callbacks/todo app/index.html
@@ -12,7 +12,7 @@
         <input type="text" id="input" placeholder="Add a new task">
       
         <span class="active" id="all">TASKS</span>
-            <button class="clear-btn" id="add">Add</button>
+            <button class="add-btn" id="add">Add</button>
             <button class="clear-btn" id="clear-all">Clear all</button>
             <ul class="task-box" id="task-box">
             </ul>
